--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+
 ###############################################################################
 ##                                                                           ##
 ##  The environment variables below overwrite the ones in the base.env file. ##
@@ -60,4 +61,35 @@ TENANT_BASE_PATH=/tenant
 TENANT_APP_URL=http://localhost:8080/tenant
 
 ## others
+REDIS_PORT=6379
+REDIS_URL=redis://redis
+MONGO_PORT=27017
+NODE_ENV=production
+LOGGER_LEVEL=info
+GATEWAY_DEBUG_PORT=9225
+GATEWAY_EXPOSE_FRONTENDS=true
+DOCKER_GATEWAY_URL=http://gateway:8080
+AUTHENTICATOR_PORT=8000
+AUTHENTICATOR_DEBUG_PORT=9226
+AUTHENTICATOR_URL=http://authenticator:8000
+PDFGENERATOR_PORT=8300
+PDFGENERATOR_DEBUG_PORT=9227
+PDFGENERATOR_URL=http://pdfgenerator:8300/pdfgenerator
+EMAILER_PORT=8400
+EMAILER_DEBUG_PORT=9228
+EMAILER_URL=http://emailer:8400/emailer
+API_PORT=8200
+API_DEBUG_PORT=9229
+TENANTAPI_PORT=8250
+TENANTAPI_DEBUG_PORT=9240
+TENANTAPI_URL=http://tenantapi:8250/tenantapi
+RESETSERVICE_PORT=8900
+RESETSERVICE_DEBUG_PORT=9230
+RESETSERVICE_URL=http://resetservice:8900
+APP_NAME=MicroRealEstate
+SIGNUP=true
+LANDLORD_FRONTEND_PORT=8180
+LANDLORD_FRONTEND_URL=http://landlord-frontend:8180
+TENANT_FRONTEND_PORT=8190
+TENANT_FRONTEND_URL=http://tenant-frontend:8190
 PRODUCTIVE=true
