--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
+    environment: 'bomatech'
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
