--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,31 +40,22 @@ jobs:
       matrix:
         include:
           - appname: gateway
-            image: ${{ secrets.DOCKER_USERNAME }}/gateway
             dockerfile: services/gateway/Dockerfile
           - appname: api
-            image: ${{ secrets.DOCKER_USERNAME }}/api
             dockerfile: services/api/Dockerfile
           - appname: tenantapi
-            image: ${{ secrets.DOCKER_USERNAME }}/tenantapi
             dockerfile: services/tenantapi/Dockerfile
           - appname: authenticator
-            image: ${{ secrets.DOCKER_USERNAME }}/authenticator
             dockerfile: services/authenticator/Dockerfile
           - appname: pdfgenerator
-            image: ${{ secrets.DOCKER_USERNAME }}/pdfgenerator
             dockerfile: services/pdfgenerator/Dockerfile
           - appname: emailer
-            image: ${{ secrets.DOCKER_USERNAME }}/emailer
             dockerfile: services/emailer/Dockerfile
           - appname: resetservice
-            image: ${{ secrets.DOCKER_USERNAME }}/resetservice
             dockerfile: services/resetservice/Dockerfile
           - appname: landlord-frontend
-            image: ${{ secrets.DOCKER_USERNAME }}/landlord-frontend
             dockerfile: webapps/landlord/Dockerfile
           - appname: tenant-frontend
-            image: ${{ secrets.DOCKER_USERNAME }}/tenant-frontend
             dockerfile: webapps/tenant/Dockerfile
 
     steps:
@@ -74,7 +65,7 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          # registry: ghcr.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
@@ -82,7 +73,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ matrix.image }}
+          images: ${{ secrets.DOCKER_USERNAME }}/${{ matrix.appname }}
 
       - name: Build and push to GitHub Container Registry
         uses: docker/build-push-action@v5
@@ -90,7 +81,7 @@ jobs:
           context: .
           file: ${{ matrix.dockerfile }}
           push: true
-          tags: '${{ matrix.image }}:${{ github.sha }}'
+          tags: '${{ secrets.DOCKER_USERNAME }}/${{ matrix.appname }}:${{ github.sha }}'
           labels: ${{ steps.meta.outputs.labels }}
 
   # deploy:
