--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,8 +62,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Docker login
-        uses: docker/login-action@v2
+      - name: Docker login to DockerHub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
@@ -74,7 +74,7 @@ jobs:
         with:
           images: ${{ secrets.DOCKER_USERNAME }}/${{ matrix.appname }}
 
-      - name: Build and push to GitHub Container Registry
+      - name: Build and push Docker images to DockerHub
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -82,6 +82,7 @@ jobs:
           push: true
           tags: '${{ secrets.DOCKER_USERNAME }}/${{ matrix.appname }}:${{ github.sha }}'
           labels: ${{ steps.meta.outputs.labels }}
+
 
   # deploy:
   #   runs-on: ubuntu-latest
