fix: docker login error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
       contents: read
       packages: write
     runs-on: ubuntu-latest
+    environment: 'bomatech'
     needs: lint
     strategy:
       matrix:
