--- a/helm/templates/api-deployment.yaml
+++ b/helm/templates/api-deployment.yaml
@@ -56,7 +56,7 @@ spec:
               value: "9229"
             - name: NODE_ENV
               value: "production"
-          image: ghcr.io/microrealestate/microrealestate/api:latest
+          image: almbolonzi/bomatech-api:latest
           name: api
           ports:
             - containerPort: 8200
