--- a/helm/templates/tenant-frontend-deployment.yaml
+++ b/helm/templates/tenant-frontend-deployment.yaml
@@ -40,7 +40,7 @@ spec:
               value: "production"
             - name: DOMAIN_URL
               value: "https://34.133.214.175:8080"
-          image: ghcr.io/microrealestate/microrealestate/tenant-frontend:latest
+          image: almbolonzi/bomatech-tenant-frontend:latest
           name: tenant-frontend
           ports:
             - containerPort: 8190
