--- a/helm/templates/authenticator-deployment.yaml
+++ b/helm/templates/authenticator-deployment.yaml
@@ -39,7 +39,7 @@ spec:
             - name: LOGGER_LEVEL
               value: "debug"
             - name: MONGO_URL
-              value: "mongodb://mongo/demodb"
+              value: "mongodb+srv://bomatech:0NRcStqJS70trojB@bomatech-cluster.0eu6m.mongodb.net/bomatechTest?retryWrites=true&w=majority&appName=Bomatech-Cluster"
             - name: PRODUCTION
               value: "true"
             - name: REDIS_URL
