--- a/helm/templates/tenant-frontend-deployment.yaml
+++ b/helm/templates/tenant-frontend-deployment.yaml
@@ -26,8 +26,8 @@ spec:
               value: "/tenant"
             - name: PORT
               value: "8190"
-            - name: DOCKER_GATEWAY_URL
-              value: "http://34.133.214.175:8080"
+            # - name: DOCKER_GATEWAY_URL
+            #   value: "http://localhost:8080"
             - name: APP_NAME
               value: "Bomatech"
             - name: CORS_ENABLED
@@ -38,8 +38,10 @@ spec:
               value: "http://34.133.214.175:8080"
             - name: NODE_ENV
               value: "production"
-            - name: DOMAIN_URL
-              value: "https://34.133.214.175:8080"
+            - name: SIGNUP
+              value: "true"
+            # - name: DOMAIN_URL
+            #   value: "http://34.133.214.175:8080"
           image: almbolonzi/bomatech-tenant-frontend:latest
           name: tenant-frontend
           ports:
