--- a/helm/templates/tenantapi-deployment.yaml
+++ b/helm/templates/tenantapi-deployment.yaml
@@ -37,7 +37,7 @@ spec:
             - name: LOGGER_LEVEL
               value: "debug"
             - name: MONGO_URL
-              value: "mongodb://mongo/demodb"
+              value: "mongodb+srv://bomatech:0NRcStqJS70trojB@bomatech-cluster.0eu6m.mongodb.net/bomatechTest?retryWrites=true&w=majority&appName=Bomatech-Cluster"
             - name: TENANTAPI_DEBUG_PORT
               value: "9240"
             - name: NODE_ENV
