--- a/helm/templates/gateway-deployment.yaml
+++ b/helm/templates/gateway-deployment.yaml
@@ -33,9 +33,9 @@ spec:
             - name: CORS_ENABLED
               value: "false"
             - name: DOMAIN_URL
-              value: "http://34.133.214.175:8080"
+              value: "http://34.69.195.156:8080"
             - name: MONGO_URL
-              value: "mongodb://mongo/demodb"
+              value: "mongodb+srv://bomatech:0NRcStqJS70trojB@bomatech-cluster.0eu6m.mongodb.net/bomatechTest?retryWrites=true&w=majority&appName=Bomatech-Cluster"
             - name: PRODUCTION
               value: "true"
             - name: REDIS_URL
