--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,10 @@ services:
   # Gateway
   - type: web
     name: gateway
+    runtime: docker
     image:
       url: docker.io/almbolonzi/bomatech-gateway:latest
-    env: docker
+    # env: docker
     # dockerContext: .
     # dockerfilePath: ./services/gateway/Dockerfile
     plan: free
@@ -57,9 +58,10 @@ services:
   # Authenticator
   - type: web
     name: authenticator
+    runtime: docker
     image:
       url: docker.io/almbolonzi/bomatech-authenticator:latest
-    env: docker
+    # env: docker
     # dockerContext: .
     # dockerfilePath: ./services/authenticator/Dockerfile
     plan: free
@@ -104,9 +106,10 @@ services:
   # PDFGenerator
   - type: web
     name: pdfgenerator
+    runtime: docker
     image:
       url: docker.io/almbolonzi/bomatech-pdfgenerator:latest
-    env: docker
+    # env: docker
     # dockerContext: .
     # dockerfilePath: ./services/pdfgenerator/Dockerfile
     plan: free
@@ -155,9 +158,10 @@ services:
   # Emailer
   - type: web
     name: emailer
+    runtime: docker
     image:
       url: docker.io/almbolonzi/bomatech-emailer:latest
-    env: docker
+    # env: docker
     # dockerContext: .
     # dockerfilePath: ./services/emailer/Dockerfile
     plan: free
@@ -220,9 +224,10 @@ services:
   # API
   - type: web
     name: api
+    runtime: docker
     image:
       url: docker.io/almbolonzi/bomatech-api:latest
-    env: docker
+    # env: docker
     # dockerContext: .
     # dockerfilePath: ./services/api/Dockerfile
     plan: free
@@ -265,9 +270,10 @@ services:
   # TenantAPI
   - type: web
     name: tenantapi
+    runtime: docker
     image:
       url: docker.io/almbolonzi/bomatech-tenantapi:latest
-    env: docker
+    # env: docker
     # dockerContext: .
     # dockerfilePath: ./services/tenantapi/Dockerfile
     plan: free
@@ -298,9 +304,10 @@ services:
   # Landlord Frontend
   - type: web
     name: landlord-frontend
+    runtime: docker
     image:
       url: docker.io/almbolonzi/bomatech-landlord-frontend:latest
-    env: docker
+    # env: docker
     # dockerContext: .
     # dockerfilePath: ./webapps/landlord/Dockerfile
     plan: free
@@ -329,9 +336,10 @@ services:
   # Tenant Frontend
   - type: web
     name: tenant-frontend
+    runtime: docker
     image:
       url: docker.io/almbolonzi/bomatech-tenant-frontend:latest
-    env: docker
+    # env: docker
     # dockerContext: .
     # dockerfilePath: ./webapps/tenant/Dockerfile
     # rootDir: .
