--- a/render.yaml
+++ b/render.yaml
@@ -183,8 +183,8 @@ services:
         sync: false
       - key: REDIS_URL
         sync: false
-      # - key: TEMPORARY_DIRECTORY
-      #   sync: false
+      - key: TEMPORARY_DIRECTORY
+        sync: false
       - key: TENANT_APP_URL
         sync: false
       - key: EMAILER_DEBUG_PORT
