--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   # Gateway
   - type: web
     name: gateway
-    env: docker
+    runtime: docker
     dockerContext: .
     dockerfilePath: ./services/gateway/Dockerfile
     plan: free
@@ -55,7 +55,7 @@ services:
   # Authenticator
   - type: web
     name: authenticator
-    env: docker
+    runtime: docker
     dockerContext: .
     dockerfilePath: ./services/authenticator/Dockerfile
     plan: free
@@ -100,6 +100,7 @@ services:
   # PDFGenerator
   - type: web
     name: pdfgenerator
+    runtime: docker
     dockerContext: .
     dockerfilePath: ./services/pdfgenerator/Dockerfile
     plan: free
@@ -148,7 +149,7 @@ services:
   # Emailer
   - type: web
     name: emailer
-    env: docker
+    runtime: docker
     dockerContext: .
     dockerfilePath: ./services/emailer/Dockerfile
     plan: free
@@ -211,7 +212,7 @@ services:
   # API
   - type: web
     name: api
-    env: docker
+    runtime: docker
     dockerContext: .
     dockerfilePath: ./services/api/Dockerfile
     plan: free
@@ -254,7 +255,7 @@ services:
   # TenantAPI
   - type: web
     name: tenantapi
-    env: docker
+    runtime: docker
     dockerContext: .
     dockerfilePath: ./services/tenantapi/Dockerfile
     plan: free
@@ -285,7 +286,7 @@ services:
   # Landlord Frontend
   - type: web
     name: landlord-frontend
-    env: docker
+    runtime: docker
     dockerContext: .
     dockerfilePath: ./webapps/landlord/Dockerfile
     plan: free
@@ -314,7 +315,7 @@ services:
   # Tenant Frontend
   - type: web
     name: tenant-frontend
-    env: docker
+    runtime: docker
     dockerContext: .
     dockerfilePath: ./webapps/tenant/Dockerfile
     # rootDir: .
