--- a/helm/templates/pdfgenerator-deployment.yaml
+++ b/helm/templates/pdfgenerator-deployment.yaml
@@ -60,7 +60,7 @@ spec:
               value: "e62d3774d57565718912a2fda32c30b86d4320ab483e41f739951130ad48c482"
             - name: CIPHER_KEY
               value: "4f9078a9c90d6e30d24400373734db3988758f773ae4f0b9b0d773aefe8c3dc6"
-          image: almbolonzi/bomatech-pdfgenerator:latest
+          image: ghcr.io/alex-mbolonzi/microrealestate/pdfgenerator:d88630553c216b9abbae70ec6ae4bd58fcf91341
           name: pdfgenerator
           ports:
             - containerPort: 8300
