--- a/helm/templates/authenticator-deployment.yaml
+++ b/helm/templates/authenticator-deployment.yaml
@@ -48,15 +48,19 @@ spec:
               value: "12264d724d371d79054887f65175aa3758d89dbc7a05ab54cdb3d8c47df3aace47ee415904a7f3229e6714263ae35ab24caa7a6861eba09bbbf23c5871daf850"
             - name: SIGNUP
               value: "true"
-            - name: TOKEN_COOKIE_ATTRIBUTES
-              value: '{"httpOnly":true,"sameSite":"strict","secure":false,"domain":"localhost"}'
+            # - name: TOKEN_COOKIE_ATTRIBUTES
+            #   value: '{"httpOnly":true,"sameSite":"strict","secure":false,"domain":"localhost"}'
             - name: AUTHENTICATOR_DEBUG_PORT
               value: "9226"
             - name: NODE_ENV
               value: "production"
-            - name: DOMAIN_URL
-              value: "http://34.66.84.104:8080"
-          image: almbolonzi/bomatech-authenticator:latest
+            # - name: DOMAIN_URL
+            #   value: "http://gateway:8080"
+            - name: APP_DOMAIN
+              value: "79.72.67.125"
+            - name: APP_PROTOCOL
+              value: "http"
+          image: ghcr.io/alex-mbolonzi/microrealestate/authenticator:d88630553c216b9abbae70ec6ae4bd58fcf91341
           name: authenticator
           ports:
             - containerPort: 8000
