--- a/package.json
+++ b/package.json
@@ -50,10 +50,11 @@
     ]
   },
   "devDependencies": {
+    "@microrealestate/landlord": "workspace:^",
     "cross-env": "7.0.3",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
-    "prettier": "3.1.1"
+    "prettier": "^3.3.3"
   },
   "resolutions": {
     "axios": "^1.7.4",
