--- a/services/api/package.json
+++ b/services/api/package.json
@@ -27,12 +27,14 @@
   "dependencies": {
     "@microrealestate/common": "*",
     "axios": "1.7.4",
+    "csv-parser": "^3.0.0",
     "i18n": "0.13.3",
     "json2csv": "5.0.6",
     "jsonwebtoken": "9.0.0",
     "lodash": "4.17.21",
     "moment": "2.29.4",
     "mongobackup": "0.3.5",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "5.0.7"
   },
   "devDependencies": {
